--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,10 +1,11 @@
-<!-- main app container -->
+
 <div class="jumbotron">
     <div class="container">
         <div class="col-sm-8 col-sm-offset-2">
             <router-outlet></router-outlet>
         </div>
     </div>
-</div>
-
-<!-- credits -->
+</div> 
+<!--
+<div>This is the first page</div>
+<button (click)="getData()">Get data</button> -->
