--- a/frontend/src/app/register/register.component.html
+++ b/frontend/src/app/register/register.component.html
@@ -1,17 +1,117 @@
-<form (ngSubmit)='onSubmit(f)' #f="ngForm">
-  <div class="form-group">
-    <label for="exampleInputEmail1">Email address</label>
-    <input name="email" type="email" [(ngModel)]="model.email" #email="ngModel" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email" required pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,3}$">
-    <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
-  </div>
-  <div class="form-group">
-    <label for="exampleInputPassword1">Password</label>
-    <input name="password" type="password" [(ngModel)]="model.password" #password="ngModel" ngModel class="form-control" id="exampleInputPassword1" placeholder="Password" required>
-  </div>
-  <div class="form-group">
-    <label for="exampleInputPassword1">Confirm Password</label>
-    <input name="repassword" type="password" [(ngModel)]="model.repassword" #repassword="ngModel" class="form-control" id="exampleInputPassword1" placeholder="Confirm password" required>
-  </div>
- 
-  <button class="btn btn-primary">Submit</button>
+
+<h2>Sign up for Userndot</h2>
+
+<!--suppress ALL -->
+<form novalidate
+(ngSubmit)="onSubmit()"
+#f="ngForm">
+
+<fieldset ngModelGroup="name">
+<div class="form-group"
+   [ngClass]="{
+  'has-danger': firstName.invalid && (firstName.dirty || firstName.touched),
+  'has-success': firstName.valid && (firstName.dirty || firstName.touched)
+}">
+<label>First Name</label>
+<input type="text"
+       class="form-control"
+       name="firstName"
+       [(ngModel)]="model.firstName"
+       required
+       #firstName="ngModel">
+<div class="feedback"
+     *ngIf="firstName.errors && (firstName.dirty || firstName.touched)">
+  <p *ngIf="firstName.errors.required">First name is required</p>
+</div>
+</div>
+
+<div class="form-group"
+   [ngClass]="{
+  'has-danger': lastName.invalid && (lastName.dirty || lastName.touched),
+  'has-success': lastName.valid && (lastName.dirty || lastName.touched)
+}">
+<label>Last Name</label>
+<input type="text"
+       class="form-control"
+       name="lastName"
+       [(ngModel)]="model.lastName"
+       required
+       #lastName="ngModel">
+<div class="feedback"
+     *ngIf="lastName.errors && (lastName.dirty || lastName.touched)">
+  <p *ngIf="lastName.errors.required">Last name is required</p>
+</div>
+</div>
+</fieldset>
+
+
+<div class="form-group"
+ [ngClass]="{
+  'has-danger': email.invalid && (email.dirty || email.touched),
+  'has-success': email.valid && (email.dirty || email.touched)
+}">
+<label>Email</label>
+<input type="email"
+     class="form-control"
+     name="email"
+     [(ngModel)]="model.email"
+     required
+     pattern="[^ @]*@[^ @]*"
+     #email="ngModel">
+<div class="feedback"
+   *ngIf="email.errors && (email.dirty || email.touched)">
+<p *ngIf="email.errors.required">Email is required</p>
+<p *ngIf="email.errors.pattern">Email must contain at least the @ character</p>
+</div>
+</div>
+
+
+<div class="form-group"
+ [ngClass]="{
+  'has-danger': password.invalid && (password.dirty || password.touched),
+  'has-success': password.valid && (password.dirty || password.touched)
+}">
+<label>Password</label>
+<input type="password"
+     class="form-control"
+     name="password"
+     [(ngModel)]="model.password"
+     required
+     minlength="8"
+     #password="ngModel">
+<div class="feedback"
+   *ngIf="password.errors && (password.dirty || password.touched)">
+<div *ngIf="password.errors.required">Password is required</div>
+<div *ngIf="password.errors.minlength">Password must be at least 8 characters long</div>
+</div>
+</div>
+
+<div class="form-group"
+[ngClass]="{
+ 'has-danger': password.invalid && (password.dirty || password.touched),
+ 'has-success': password.valid && (password.dirty || password.touched)
+}">
+<label>Re Type Password</label>
+<input type="password"
+    class="form-control"
+    name="password"
+    [(ngModel)]="model.password"
+    required
+    minlength="8"
+    #password="ngModel">
+<div class="feedback"
+  *ngIf="password.errors && (password.dirty || password.touched)">
+<div *ngIf="password.errors.required">Password is required</div>
+<div *ngIf="password.errors.minlength">Password must be at least 8 characters long</div>
+</div>
+</div>
+
+
+
+
+<button type="submit"
+    class="btn btn-success"
+    [disabled]="f.invalid">Register
+</button>
+
 </form>
