--- a/frontend/src/app/register/register.component.html
+++ b/frontend/src/app/register/register.component.html
@@ -46,6 +46,44 @@
 
 
 <div class="form-group"
+[ngClass]="{
+'has-danger': company.invalid && (company.dirty || company.touched),
+'has-success': company.valid && (company.dirty || company.touched)
+}">
+<label>Company Name</label>
+<input type="text"
+    class="form-control"
+    name="company"
+    [(ngModel)]="model.company"
+    required
+    #company="ngModel">
+<div class="feedback"
+  *ngIf="company.errors && (company.dirty || company.touched)">
+<p *ngIf="company.errors.required">Company name is required</p>
+</div>
+</div>
+
+
+<div class="form-group"
+[ngClass]="{
+'has-danger': mobile.invalid && (mobile.dirty || mobile.touched),
+'has-success': mobile.valid && (mobile.dirty || mobile.touched)
+}">
+<label>Mobile number</label>
+<input type="number"
+    class="form-control"
+    name="mobile"
+    [(ngModel)]="model.mobile"
+    required
+    #mobile="ngModel">
+<div class="feedback"
+  *ngIf="mobile.errors && (mobile.dirty || mobile.touched)">
+<p *ngIf="mobile.errors.required">Mobile is required</p>
+</div>
+</div>
+
+
+<div class="form-group"
  [ngClass]="{
   'has-danger': email.invalid && (email.dirty || email.touched),
   'has-success': email.valid && (email.dirty || email.touched)
@@ -64,6 +102,28 @@
 <p *ngIf="email.errors.pattern">Email must contain at least the @ character</p>
 </div>
 </div>
+
+
+<div class="form-group"
+[ngClass]="{
+ 'has-danger': country.invalid && (country.dirty || country.touched),
+ 'has-success': country.valid && (country.dirty || country.touched)
+}">
+<label>Country</label>
+<input type="text"
+    class="form-control"
+    name="country"
+    [(ngModel)]="model.country"
+    required
+    
+    #country="ngModel">
+<div class="feedback"
+  *ngIf="country.errors && (country.dirty || country.touched)">
+<p *ngIf="country.errors.required">Country is required</p>
+
+</div>
+</div>
+
 
 
 <div class="form-group"
@@ -88,21 +148,19 @@
 
 <div class="form-group"
 [ngClass]="{
- 'has-danger': password.invalid && (password.dirty || password.touched),
- 'has-success': password.valid && (password.dirty || password.touched)
+'has-danger': comments.invalid && (comments.dirty || comments.touched),
+'has-success': comments.valid && (comments.dirty || comments.touched)
 }">
-<label>Re Type Password</label>
-<input type="password"
+<label>COmments</label>
+<input type="text"
     class="form-control"
-    name="password"
-    [(ngModel)]="model.password"
+    name="comments"
+    [(ngModel)]="model.comments"
     required
-    minlength="8"
-    #password="ngModel">
+    #comments="ngModel">
 <div class="feedback"
-  *ngIf="password.errors && (password.dirty || password.touched)">
-<div *ngIf="password.errors.required">Password is required</div>
-<div *ngIf="password.errors.minlength">Password must be at least 8 characters long</div>
+  *ngIf="comments.errors && (comments.dirty || comments.touched)">
+<p *ngIf="comments.errors.required">Comments required</p>
 </div>
 </div>
 
