--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,10 +1,11 @@
-<div class="jumbotron">
-  <div class="container">
-    <div class="col-sm-8 col-sm-offset-2">
-      <router-outlet></router-outlet>
-    </div>
-  </div>
+<!--<div class="jumbotron">-->
+<div class="container-fluid">
+  <!--<div class="col-sm-8 col-sm-offset-2">-->
+  <app-header *ngIf="isLoggedIn()" class="loggedIn"></app-header>
+  <app-logout-header *ngIf="!isLoggedIn()" class="notLoggedIn"></app-logout-header>
+  <!--<div *ngIf="isLoggedIn()"></div>-->
+  <router-outlet></router-outlet>
+  <app-footer></app-footer>
+  <!--</div>-->
 </div>
-<!--
-<div>This is the first page</div>
-<button (click)="getData()">Get data</button> -->
+<!--</div>-->
