--- a/frontend/src/app/home/home.component.html
+++ b/frontend/src/app/home/home.component.html
@@ -1,12 +1,11 @@
-<div class="col-md-6 col-md-offset-3">
+<div>
+<!--<div class="col-md-6 col-md-offset-3">-->
   <h1>Home</h1>
   <p>You're logged in with JWT!!</p>
   <div>
     Users from secure api end point:
     <ul>
-      <li *ngFor="let user of users">{{user.firstName}} {{user.lastName}}</li>
+      <li *ngFor="let user of users">{{user.standardInfo.firstName}} {{user.standardInfo.lastName}}</li>
     </ul>
   </div>
-  <p><a [routerLink]="['/login']">Logout</a></p>
-  <p><a [routerLink]="['/register']">Register</a></p>
 </div>
