--- a/frontend/src/app/register/register.component.css
+++ b/frontend/src/app/register/register.component.css
@@ -1,3 +1,7 @@
-input.ng-invalid {
+
+input.ng-invalid.ng-touched {
+  border: 1px solid red;
+}
+input.ng-invalid.ng-dirty {
   border: 1px solid red;
 }
