--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,11 +1,14 @@
 <!--<div class="jumbotron">-->
 <div class="container-fluid">
   <!--<div class="col-sm-8 col-sm-offset-2">-->
-  <app-header *ngIf="isLoggedIn()" class="loggedIn"></app-header>
-  <app-logout-header *ngIf="!isLoggedIn()" class="notLoggedIn"></app-logout-header>
+  <app-header *ngIf="isLoggedIn()" class="loggedIn"></app-header><!--(logout)="logout()"-->
+  <app-logout-header *ngIf="!isLoggedIn()" class="notLoggedIn"></app-logout-header><!--(loginEvent)="login()"-->
   <!--<div *ngIf="isLoggedIn()"></div>-->
-  <router-outlet></router-outlet>
+  <div style="min-height:70vh">
+    <router-outlet></router-outlet>
+  </div>
   <app-footer></app-footer>
+  <app-messages></app-messages>
   <!--</div>-->
 </div>
 <!--</div>-->
