--- a/frontend/src/app/header/header.component.html
+++ b/frontend/src/app/header/header.component.html
@@ -11,8 +11,15 @@
         <li class="nav-item" [routerLinkActive]="['active']" [routerLinkActiveOptions]="{exact: true}">
           <a class="nav-link" [routerLink]="['/']">Home</a>
         </li>
-        <li class="nav-item" [routerLinkActive]="['active']">
-          <a class="nav-link" [routerLink]="['/settings']">Settings</a>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownTemplates" role="button" data-toggle="dropdown"
+             aria-haspopup="true" aria-expanded="false" [routerLinkActive]="['active']">
+            Templates
+          </a>
+          <div class="dropdown-menu dropdown-menu-left" aria-labelledby="navbarDropdown" [routerLinkActive]="['active']">
+            <a class="dropdown-item" [routerLink]="['/templates/email']" [routerLinkActive]="['active']">Email Templates</a>
+            <a class="dropdown-item" [routerLink]="['/templates/sms']" [routerLinkActive]="['active']">Sms Templates</a>
+          </div>
         </li>
 
         <li class="nav-item">
@@ -26,10 +33,11 @@
             {{clientName()}}
           </a>
           <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
-            <a class="dropdown-item" [routerLink]="['/settings/service-provider-settings']"><i class="fas fa-cog"></i> Settings</a>
+            <a class="dropdown-item" [routerLink]="['/settings/service-provider-settings']"><i class="fas fa-cog"></i>
+              Settings</a>
             <a class="dropdown-item" href="#">Another action</a>
             <div class="dropdown-divider"></div>
-            <a class="dropdown-item" [routerLink]="['/login']"><i class="fas fa-power-off"></i> Logout</a>
+            <a class="dropdown-item" [routerLink]="['/login']" (click)="logoutUser()"><i class="fas fa-power-off"></i> Logout</a>
           </div>
         </li>
       </ul>
