--- a/frontend/src/app/settings/profile/profile.component.html
+++ b/frontend/src/app/settings/profile/profile.component.html
@@ -27,7 +27,7 @@
                  name="firstName"
                  [(ngModel)]="userProfile.firstname"
                  required
-                 #firstName="ngModel">
+                 #firstName="ngModel" placeholder="First Name">
           <div class="feedback"
                *ngIf="firstName.errors && (firstName.dirty || firstName.touched)">
             <p *ngIf="firstName.errors.required">First name is required</p>
@@ -41,7 +41,7 @@
                  name="lastName"
                  [(ngModel)]="userProfile.lastname"
                  required
-                 #lastName="ngModel">
+                 #lastName="ngModel" placeholder="Last Name">
           <div class="feedback"
                *ngIf="lastName.errors && (lastName.dirty || lastName.touched)">
             <p *ngIf="lastName.errors.required">Last name is required</p>
@@ -50,7 +50,7 @@
       </fieldset>
 
 
-      <div class="form-group">
+      <!--<div class="form-group">
         <label>Company Name</label>
         <input type="text"
                class="form-control"
@@ -62,7 +62,7 @@
              *ngIf="company.errors && (company.dirty || company.touched)">
           <p *ngIf="company.errors.required">Company name is required</p>
         </div>
-      </div>
+      </div>-->
 
 
       <div class="form-group">
@@ -72,7 +72,7 @@
                name="mobile"
                [(ngModel)]="userProfile.phone"
                required
-               #mobile="ngModel">
+               #mobile="ngModel" placeholder="Mobile Number">
         <div class="feedback"
              *ngIf="mobile.errors && (mobile.dirty || mobile.touched)">
           <p *ngIf="mobile.errors.required">Mobile is required</p>
@@ -82,13 +82,12 @@
 
       <div class="form-group">
         <label>Address</label>
-        <input type="email"
+        <textarea type="text"
                class="form-control"
-               name="email"
+               name="address"
                [(ngModel)]="userProfile.address"
-               placeholder="test@test.com"
-               readonly
-               #address="ngModel">
+               required
+                  #address="ngModel" placeholder="Address" ></textarea>
 
       </div>
 
