--- a/frontend/src/app/settings/serviceproviders/serviceproviders.component.html
+++ b/frontend/src/app/settings/serviceproviders/serviceproviders.component.html
@@ -9,10 +9,10 @@ username: string;
 password: string;-->
 <div class="row justify-content-center">
   <div class="col-sm-6">
-    <form>
+    <form novalidate (ngSubmit)="onSave()" #f="ngForm">
       <div class="form-group">
         <label for="serviceProviderType">Service Provider Type</label>
-        <select class="form-control" id="serviceProviderType">
+        <select required class="form-control" id="serviceProviderType" name="serviceProviderType" [(ngModel)]="serviceProviderCredentials.serviceProviderType">
           <option *ngFor="let serviceProviderType of serviceProviderTypes" value="{{serviceProviderType}}">
             {{serviceProviderType}}
           </option>
@@ -20,29 +20,29 @@ password: string;-->
       </div>
       <div class="form-group">
         <label for="serviceProvider">Service Provider</label>
-        <select class="form-control" id="serviceProvider">
+        <select required class="form-control" id="serviceProvider" name="serviceProvider" [(ngModel)]="serviceProviderCredentials.serviceProvider">
           <option *ngFor="let serviceProvider of serviceProviders" value="{{serviceProvider}}">{{serviceProvider}}
           </option>
         </select>
       </div>
       <div class="form-group">
         <label for="url">Url</label>
-        <input type="text" class="form-control" id="url" placeholder="https://example.com">
+        <input required type="text" class="form-control" id="url" name="url" placeholder="https://example.com" [(ngModel)]="serviceProviderCredentials.url">
       </div>
       <div class="form-group">
         <label for="port">Port</label>
-        <input type="number" class="form-control" id="port">
+        <input required type="number" placeholder="Port" class="form-control" id="port" name="port" [(ngModel)]="serviceProviderCredentials.port">
       </div>
       <div class="form-group">
         <label for="username">Username</label>
-        <input type="text" class="form-control" id="username">
+        <input required type="text" placeholder="Username" class="form-control" id="username" name="username" [(ngModel)]="serviceProviderCredentials.username">
       </div>
       <div class="form-group">
         <label for="password">Password</label>
-        <input type="password" class="form-control" id="password">
+        <input required type="password" placeholder="Password" class="form-control" id="password" name="password" [(ngModel)]="serviceProviderCredentials.password">
       </div>
       <div class="text-right">
-        <button class="btn btn-primary">Save</button>
+        <button type="submit" class="btn btn-primary" [disabled]="f.invalid">Save</button>
       </div>
     </form>
   </div>
