--- a/frontend/src/app/templates/email-templates/create-email-template-form/create-email-template-form.component.html
+++ b/frontend/src/app/templates/email-templates/create-email-template-form/create-email-template-form.component.html
@@ -31,7 +31,12 @@
   </div>
   <div class="form-group col-sm-12">
     <label for="emailBody">Email Body</label>
-    <textarea type="text" class="form-control" id="emailBody" name="emailBody" placeholder="Email Body" rows="8" [(ngModel)]="emailTemplate.emailTemplateBody"></textarea>
+    <textarea *ngIf="!showRichTextEditor" type="text" class="form-control" id="emailBody" name="emailBody" placeholder="Email Body" rows="8" [(ngModel)]="emailTemplate.emailTemplateBody" [mention]="items" [mentionConfig]="{triggerChar:'$',maxItems:10,labelKey:'name'}"></textarea>
+    <ck-editor *ngIf="showRichTextEditor" type="text" placeholder="Email Body" rows="8" name="emailBody" [(ngModel)]="emailTemplate.emailTemplateBody" skin="moono-lisa" lang="en" [fullPage]="false"></ck-editor>
+<!--
+    <app-simple-tiny *ngIf="showRichTextEditor" [elementId]="'my-editor-id'" (onEditorKeyup)="keyupHandlerFunction($event)"></app-simple-tiny>
+-->
+    <div class="text-right"><i class="fa fa-user" aria-hidden="true"></i></div>
   </div>
   <div class="text-right col-sm-12">
     <button type="submit" class="btn btn-primary" data-toggle="modal" data-target="#exampleModalLong">Save</button>
