--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,5 +1,5 @@
 <!--<div class="jumbotron">-->
-<div class="container-fluid">
+<div class="fluid">
   <!--<div class="col-sm-8 col-sm-offset-2">-->
   <app-header *ngIf="isLoggedIn()" class="loggedIn"></app-header><!--(logout)="logout()"-->
   <app-logout-header *ngIf="!isLoggedIn()" class="notLoggedIn"></app-logout-header><!--(loginEvent)="login()"-->
