--- a/frontend/src/app/templates/email-templates/create-email-template-form/create-email-template-form.component.html
+++ b/frontend/src/app/templates/email-templates/create-email-template-form/create-email-template-form.component.html
@@ -10,7 +10,7 @@
       <option value="TRANSACTIONAL">TRANSACTIONAL</option>
     </select>
   </div>
-  <div class="form-group col-sm-8 col-md-6 col-lg-5">bn
+  <div class="form-group col-sm-8 col-md-6 col-lg-5">
     <label for="fromEmailAddress">From Email address</label>
     <select type="email" class="form-control" id="fromEmailAddress" name="fromEmailAddress" [(ngModel)]="emailTemplate.from">
       <option>amit@userndot.com</option>
