--- a/frontend/src/app/segment-category/find-users/find-users.component.html
+++ b/frontend/src/app/segment-category/find-users/find-users.component.html
@@ -14,7 +14,8 @@
           <div class="card">
             <div class="card-body">
               <div class="card-title">Users who did <span class="small text-muted">(optional)</span></div>
-              <button class="btn btn-success"><i class="fa fa-plus-circle"></i> Add Event</button>
+              <app-did-events></app-did-events>
+              <button class="btn btn-success  mt-3"><i class="fa fa-plus-circle"></i> Add Event</button>
             </div>
           </div>
           AND
