--- a/frontend/src/app/segment-category/did-events/did-events.component.html
+++ b/frontend/src/app/segment-category/did-events/did-events.component.html
@@ -1,8 +1,14 @@
-<div class="form-group col-lg-3 col-md-4 col-sm-6 pl-0">
-  <select class="form-control" id="andOr">
-    <option>All (AND)</option>
-    <option>Any (OR)</option>
-  </select>
+<div class="form-group col-4 d-inline-flex">
+    <div class="mr-4">
+      <select class="form-control" id="andOr">
+        <option>All (AND)</option>
+        <option>Any (OR)</option>
+      </select>
+    </div>
+    <div class="mt-2">
+      <p>OF THESE EVENTS</p>
+    </div>
+
 </div>
 <div class="event-widget">
   <div class="form-group col-4">
