deleting lock file

--- a/frontend/src/app/segment-category/segments/segments.component.html
+++ b/frontend/src/app/segment-category/segments/segments.component.html
@@ -1,15 +1,27 @@
-<p>
-  segments works!
-</p>
-<div class="container">
-  <div class="card">
-    <div class="card-header">
-      Featured
-    </div>
-    <div class="card-body">
-      <h5 class="card-title">Special title treatment</h5>
-      <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-      <a href="#" class="btn btn-primary">Go somewhere</a>
-    </div>
+<div class="container-fluid">
+  <div class="row my-4">
+    <button class="btn btn-success ml-auto mr-4"><i class="fa fa-plus-circle mr-2"></i> Segment</button>
   </div>
+</div>
+<div class="container-fluid">
+  <table class="table table-bordered my-3">
+    <thead style="background-color: rgba(0, 0, 0, .03);">
+    <tr>
+      <th scope="col">#</th>
+      <th scope="col">Segment Name</th>
+      <th scope="col">Segment Type</th>
+      <th scope="col">Created On</th>
+      <th scope="col">Actions</th>
+    </tr>
+    </thead>
+    <tbody>
+    <tr *ngFor="let segment of segments">
+      <th scope="row">{{segment.id}}</th>
+      <td>{{segment.name}}</td>
+      <td>{{segment.type}}</td>
+      <td>{{segment.creationDate}}</td>
+      <td></td>
+    </tr>
+    </tbody>
+  </table>
 </div>
