--- a/frontend/src/app/segment-category/find-users/find-users.component.html
+++ b/frontend/src/app/segment-category/find-users/find-users.component.html
@@ -1,9 +1,4 @@
-<div class="fluid">
-  <div>
-    Segment
-    <br>
-    Find Users
-  </div>
+<div class="fluid mt-5">
   <div class="row">
     <div class="col-8">
       <div class="card">
@@ -13,9 +8,9 @@
         <div class="card-body">
           <div class="card">
             <div class="card-body">
-              <div class="card-title">Users who did <span class="small text-muted">(optional)</span></div>
+              <div class="card-title"><h4>Users who did <span class="small text-muted">(optional)</span></h4></div>
               <app-did-events></app-did-events>
-              <button class="btn btn-success  mt-3"><i class="fa fa-plus-circle"></i> Add Event</button>
+
             </div>
           </div>
           AND
