--- a/frontend/src/app/settings/profile/profile.component.html
+++ b/frontend/src/app/settings/profile/profile.component.html
@@ -8,41 +8,44 @@
           #f="ngForm">
 
       <div class="form-group">
-        <label>Email</label>
+        <label>Email<sup class="text-danger">*</sup></label>
         <input type="email"
                class="form-control"
                name="email"
                [(ngModel)]="username"
                placeholder="test@test.com"
                readonly
-               #address="ngModel">
-
+               #email="ngModel">
+        <div class="feedback text-danger"
+             *ngIf="email.errors && (email.dirty || email.touched)">
+          <p *ngIf="email.errors.required">Email is required</p>
+        </div>
       </div>
 
       <fieldset ngModelGroup="name">
         <div class="form-group">
-          <label>First Name</label>
+          <label>First Name<sup class="text-danger">*</sup></label>
           <input type="text"
                  class="form-control"
                  name="firstName"
                  [(ngModel)]="userProfile.firstname"
                  required
                  #firstName="ngModel" placeholder="First Name">
-          <div class="feedback"
+          <div class="feedback text-danger"
                *ngIf="firstName.errors && (firstName.dirty || firstName.touched)">
             <p *ngIf="firstName.errors.required">First name is required</p>
           </div>
         </div>
 
         <div class="form-group">
-          <label>Last Name</label>
+          <label>Last Name<sup class="text-danger">*</sup></label>
           <input type="text"
                  class="form-control"
                  name="lastName"
                  [(ngModel)]="userProfile.lastname"
                  required
                  #lastName="ngModel" placeholder="Last Name">
-          <div class="feedback"
+          <div class="feedback text-danger"
                *ngIf="lastName.errors && (lastName.dirty || lastName.touched)">
             <p *ngIf="lastName.errors.required">Last name is required</p>
           </div>
@@ -66,14 +69,14 @@
 
 
       <div class="form-group">
-        <label>Mobile number</label>
+        <label>Mobile number<sup class="text-danger">*</sup></label>
         <input type="number"
                class="form-control"
                name="mobile"
                [(ngModel)]="userProfile.phone"
                required
                #mobile="ngModel" placeholder="Mobile Number">
-        <div class="feedback"
+        <div class="feedback text-danger"
              *ngIf="mobile.errors && (mobile.dirty || mobile.touched)">
           <p *ngIf="mobile.errors.required">Mobile is required</p>
         </div>
@@ -83,11 +86,11 @@
       <div class="form-group">
         <label>Address</label>
         <textarea type="text"
-               class="form-control"
-               name="address"
-               [(ngModel)]="userProfile.address"
-               required
-                  #address="ngModel" placeholder="Address" ></textarea>
+                  class="form-control"
+                  name="address"
+                  [(ngModel)]="userProfile.address"
+                  required
+                  #address="ngModel" placeholder="Address"></textarea>
 
       </div>
 
