--- a/frontend/src/app/segment-category/find-users/find-users.component.html
+++ b/frontend/src/app/segment-category/find-users/find-users.component.html
@@ -8,7 +8,7 @@
         <div class="card-body">
           <div class="card">
             <div class="card-body">
-              <div class="card-title"><h4>Users who did <span class="small text-muted">(optional)</span></h4></div>
+              <div class="card-title"><h4 class="d-inline">Users who did </h4><span class="small text-muted">(optional)</span></div>
               <app-did-events></app-did-events>
 
             </div>
