segment - global filters

--- a/frontend/src/app/register/register.component.html
+++ b/frontend/src/app/register/register.component.html
@@ -4,7 +4,7 @@
       <h2 class="text-center">Sign up for Userndot</h2>
 
       <!--suppress ALL -->
-      <form novalidate (ngSubmit)="onSubmit()" #f="ngForm">
+      <form novalidate (ngSubmit)="onSubmit(f)" #f="ngForm">
 
         <fieldset ngModelGroup="name">
           <div class="form-group">
