--- a/frontend/src/app/settings/profile/profile.component.html
+++ b/frontend/src/app/settings/profile/profile.component.html
@@ -4,7 +4,7 @@
 
     <!--suppress ALL -->
     <form novalidate
-          (ngSubmit)="onSubmit()"
+          (ngSubmit)="onSubmit(f)"
           #f="ngForm">
 
       <div class="form-group">
