--- a/frontend/src/app/settings/serviceproviders/serviceproviders.component.html
+++ b/frontend/src/app/settings/serviceproviders/serviceproviders.component.html
@@ -9,7 +9,7 @@ username: string;
 password: string;-->
 <div class="row justify-content-center">
   <div class="col-sm-6">
-    <form novalidate (ngSubmit)="onSave()" #f="ngForm">
+    <form novalidate (ngSubmit)="onSave(f)" #f="ngForm">
       <div class="form-group">
         <label for="serviceProviderType">Service Provider Type</label>
         <select required class="form-control" id="serviceProviderType" name="serviceProviderType" [(ngModel)]="serviceProviderCredentials.serviceProviderType">
