--- a/frontend/src/app/templates/email-templates/create-email-template-form/create-email-template-form.component.html
+++ b/frontend/src/app/templates/email-templates/create-email-template-form/create-email-template-form.component.html
@@ -1,4 +1,4 @@
-<form (ngSubmit)="onSave()" #f="ngForm">
+<form (ngSubmit)="onSave(f)" #f="ngForm">
   <div class="form-group col-sm-12">
     <label for="name">Name</label>
     <input type="text" class="form-control" maxlength="100" id="name" name="name" placeholder="Name (Will help you in searching templates)"  [(ngModel)]="emailTemplate.name">
