--- a/frontend/src/app/segment-category/find-users/find-users.component.html
+++ b/frontend/src/app/segment-category/find-users/find-users.component.html
@@ -1,6 +1,6 @@
-<div class="fluid mt-5">
-  <div class="row">
-    <div class="col-8">
+<div class="container-fluid">
+  <div class="row d-flex flex-wrap flex-row">
+    <div class="col-lg-8 mt-5">
       <div class="card">
         <div class="card-header">
           <i class="fas fa-users"></i> Users by behavior
@@ -24,14 +24,25 @@
           <div class="card">
             <div class="card-body">
               <div class="card-title">Users with these properties <span class="small text-muted">(optional)</span></div>
+              <app-global-filters></app-global-filters>
               <button class="btn btn-success"><i class="fa fa-plus-circle"></i> Add user properties</button>
             </div>
           </div>
         </div>
       </div>
     </div>
-    <div class="col-4">
+    <div class="col-lg-4 mt-5">
       <div class="card">
+        <div class="card-header">
+          <i class="fas fa-user"></i> Users by identity
+        </div>
+        <div class="card-body">
+          <h5 class="card-title">Special title treatment</h5>
+          <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+          <a href="#" class="btn btn-primary">Go somewhere</a>
+        </div>
+      </div>
+      <div class="card mt-5">
         <div class="card-header">
           <i class="fas fa-user"></i> Users by identity
         </div>
