--- a/frontend/src/app/header/header.component.html
+++ b/frontend/src/app/header/header.component.html
@@ -27,14 +27,17 @@
              aria-haspopup="true" aria-expanded="false" [routerLinkActive]="['active']">
             Segments
           </a>
-          <div class="dropdown-menu dropdown-menu-left" aria-labelledby="navbarDropdown" [routerLinkActive]="['active']">
+          <div class="dropdown-menu dropdown-menu-left" aria-labelledby="navbarDropdownSegments" [routerLinkActive]="['active']">
             <a class="dropdown-item" [routerLink]="['/segment/find-users']" [routerLinkActive]="['active']">Find Users</a>
             <a class="dropdown-item" [routerLink]="['/segment/segments']" [routerLinkActive]="['active']">Segments</a>
           </div>
         </li>
 
+        <li class="nav-item" [routerLinkActive]="['active']" [routerLinkActiveOptions]="{exact: true}">
+          <a class="nav-link" [routerLink]="['/campaigns']">Campaigns</a>
+        </li>
         <li class="nav-item">
-          <a class="nav-link disabled" href="#">Disabled</a>
+          <a class="nav-link disabled">Disabled</a>
         </li>
       </ul>
       <ul class="navbar-nav ml-auto">
