segment - generic style of code

--- a/frontend/src/app/segment-category/did-events/did-event/filter/filter.component.html
+++ b/frontend/src/app/segment-category/did-events/did-event/filter/filter.component.html
@@ -1,80 +1,54 @@
-<div class="form-inline">
-  <div class="form-group col-3 my-0 pr-0">
-    <select class="form-control col-12"
+<div class="form-inline mb-2">
+  <div class="form-group m-2 ml-4">
+    <select class="form-control"
             (change)="filterFirstDropdown($event.target.value)">
-      <option *ngFor="let prop of properties">{{prop.name}}</option>
-      <!--<option>First Time</option>-->
-      <!--<option>Time of the day</option>-->
-      <!--<option>Day of the week</option>-->
-      <!--<option>Day of the month</option>-->
+      <option value="" disabled>--Select--</option>
+      <option *ngFor="let prop of eventProperties" [value]="prop.name">{{prop.name}}</option>
+      <option *ngFor="let prop of defaultProperties" [value]="prop.name">{{prop.name}}</option>
     </select>
   </div>
-  <div class="form-group col-3 my-0 pr-0"
-       *ngIf="eventProperty">
-    <select class="form-control col-12"
-            (change)="filterSecondDropdown($event.target.value)">
-      <option selected>Amount</option>
-      <option>Category</option>
-      <option>Delivery Date</option>
-      <option>Payment Mode</option>
-      <option>Product</option>
-    </select>
+  <div class="form-group col-3 my-0 pr-0" *ngIf="selectedProperty && selectedProperty.dataType=='string'">
+    <app-string-comparator></app-string-comparator>
   </div>
-  <div class="form-group col-3 my-0 pr-0"
-       *ngIf="eventProperty">
-    <select class="form-control col-12"
-            (change)="filterDropdown($event.target.value)"
-            [hidden]="hideEqualityDropdown"
-            >
-      <option selected>=&nbsp;&nbsp;(equals)</option>
-      <option>≏&nbsp;&nbsp;(Between)</option>
-      <option>>&nbsp;&nbsp;(greater than)</option>
-      <option><&nbsp;&nbsp;(less than)</option>
-      <option>≠&nbsp;&nbsp;(not equals)</option>
-      <option>∃&nbsp;&nbsp;(exists)</option>
-      <option>∄&nbsp;&nbsp;(does not exists)</option>
-    </select>
+  <div class="form-group col-3 my-0 pr-0" *ngIf="selectedProperty && selectedProperty.dataType=='number'">
+    <app-number-comparator></app-number-comparator>
   </div>
-  <div class="form-group col-1 ml-3 px-0"
-       *ngIf="eventProperty"
-       [hidden]="hideInputNumber">
-    <input type="number" class="form-control col-12" value="1" min="1">
+  <div class="form-group col-3 my-0 pr-0" *ngIf="selectedProperty && selectedProperty.dataType=='date'">
+    <app-date-comparator></app-date-comparator>
   </div>
-  <div class="mx-3 mt-1"
-       *ngIf="timeOfTheDay">
-  <label>
-    From :
-    <input [owlDateTimeTrigger]="dt4" [owlDateTime]="dt4">
-    <owl-date-time [pickerType]="'timer'" #dt4></owl-date-time>
-  </label>
-  </div>
-  <div class="mx-3 mt-1"
-       *ngIf="timeOfTheDay">
-    <label>
-      To:
-      <input [owlDateTimeTrigger]="dt1" [owlDateTime]="dt1">
-      <owl-date-time [pickerType]="'timer'" #dt1></owl-date-time>
-    </label>
-  </div>
-  <form class="mx-5" *ngIf="firstTime">
-    <div class="form-group">
-      <angular-multiselect [data]="firstTimeList" [(ngModel)]="formModel.skills"
-                            [settings]="dropdownSettings"
-                            name="skills">
-      </angular-multiselect>
-    </div>
-  </form>
-  <form class="mx-3" *ngIf="dayOfTheWeek" style="width: 500px;height: 32px;">
-    <div class="multiselect">
-      <angular-multiselect [data]="dayOfTheWeekList" [(ngModel)]="formModel1.skills"
-                            [settings]="dropdownSettings"
-                            name="skills1"
-                            >
-      </angular-multiselect>
-    </div>
-  </form>
-  <!--<div class="form-group col-1 mx-3 px-0"-->
-       <!--[hidden]="hideInputBetween">-->
+  <!--<div class="form-group col-1 ml-3 px-0" *ngIf="eventProperty" [hidden]="hideInputNumber">-->
     <!--<input type="number" class="form-control col-12" value="1" min="1">-->
   <!--</div>-->
+  <div *ngIf="selectedProperty && selectedProperty.dataType=='timerange'">
+    <div class="mx-3 mt-1">
+      <label>
+        From :
+        <input [owlDateTimeTrigger]="dt4" [owlDateTime]="dt4">
+        <owl-date-time [pickerType]="'timer'" #dt4></owl-date-time>
+      </label>
+    </div>
+    <div class="mx-3 mt-1">
+      <label>
+        To:
+        <input [owlDateTimeTrigger]="dt1" [owlDateTime]="dt1">
+        <owl-date-time [pickerType]="'timer'" #dt1></owl-date-time>
+      </label>
+    </div>
+  </div>
+  <div class="form-group" *ngIf="selectedProperty && selectedProperty.dataType==='select'">
+      <select class="form-control" *ngIf="selectedProperty.dataType==='select'">
+        <option value="" disabled selected>--Select--</option>
+        <option *ngFor="let prop of selectedProperty.options" [value]="prop">{{prop}}</option>
+      </select>
+  </div>
+  <div *ngIf="selectedProperty && selectedProperty.dataType=='multiselect'">
+      <angular-multiselect [data]="getSelectedPropertyOptions()" [(ngModel)]="formModel1.skills"
+                            [settings]="dropdownSettings"
+                            name="multiselect"
+                            >
+      </angular-multiselect>
+  </div>
+  <button type="button" class="close ml-auto mr-4 pos" aria-label="Close" (click)="removeObject()">
+    <span aria-hidden="true">&times;</span>
+  </button>
 </div>
