--- a/frontend/src/app/segment-category/find-users/find-users.component.html
+++ b/frontend/src/app/segment-category/find-users/find-users.component.html
@@ -10,14 +10,13 @@
             <div class="card-body">
               <div class="card-title"><h4 class="d-inline">Users who did </h4><span class="small text-muted">(optional)</span></div>
               <app-did-events></app-did-events>
-
             </div>
           </div>
           AND
           <div class="card">
             <div class="card-body">
               <div class="card-title">Users who did not do <span class="small text-muted">(optional)</span></div>
-              <button class="btn btn-success"><i class="fa fa-plus-circle"></i> Add Event</button>
+              <app-did-events [didNotEvent]="true"></app-did-events>
             </div>
           </div>
           AND
@@ -25,7 +24,13 @@
             <div class="card-body">
               <div class="card-title">Users with these properties <span class="small text-muted">(optional)</span></div>
               <app-global-filters></app-global-filters>
-              <button class="btn btn-success"><i class="fa fa-plus-circle"></i> Add user properties</button>
+            </div>
+          </div>
+          AND
+          <div class="card">
+            <div class="card-body">
+              <div class="card-title">Users with these Locations <span class="small text-muted">(optional)</span></div>
+              <app-geography-filters></app-geography-filters>
             </div>
           </div>
         </div>
