--- a/frontend/src/app/segment-category/did-events/did-event/did-event.component.html
+++ b/frontend/src/app/segment-category/did-events/did-event/did-event.component.html
@@ -1,93 +1,36 @@
-<div class="event-widget my-2"
-     #eventWidget>
-  <div class="form-inline">
-    <div class="form-group col-sm-4 my-3 pr-0">
-      <select class="form-control col-12" (change)="eventNameChanged($event.target.value)">
-        <option *ngFor="let regEvent of registeredEvents">{{ regEvent.name }}</option>
-        <!--<option>App Uninstalled</option>-->
-        <!--<option selected>Charged</option>-->
-        <!--<option>Category Viewed</option>-->
-        <!--<option>Notification Sent</option>-->
-        <!--<option>Notification Viewed</option>-->
-        <!--<option>Product Viewed</option>-->
-        <!--<option>Payment Offer Applied</option>-->
-        <!--<option>Support Call</option>-->
-        <!--<option>Searched</option>-->
-        <!--<option>UTM Visited</option>-->
+<div class="event-widget" #eventWidget>
+  <div class="row d-flex flex-row ml-2">
+    <div class="form-group m-2 mr-4">
+      <select class="form-control" (change)="eventNameChanged($event.target.value)">
+        <option value="" disabled selected>--Select--</option>
+        <option *ngFor="let regEvent of registeredEvents;let i=index" [value]="i">{{ regEvent.name }}</option>
       </select>
-    </div>
-    <div class="form-group col-sm-2 my-3">
-      <select class="form-control"
-              (change)="dropdownChanged($event.target.value)">
-        <option value="Before">Before</option>
-        <option value="After">After</option>
-        <option value="On">On</option>
-        <option value="Between">Between</option>
-        <option value="In the Past">In the Past</option>
-        <option value="Was Exactly">Was Exactly</option>
-        <option value="Today" selected>Today</option>
-      </select>
-    </div>
-    <div class="form-group col-sm-2 my-3"
-         *ngIf="!hideElementDatepicker">
-
-      <div class="input-group"
-           daterangepicker
-           [options]="singlePicker"
-           (selected)="singleSelect($event)"
-      >
-      <span class="form-control uneditable-input pr-4"  name="daterange" >
-        {{ singleDate | date:'M/dd/y' }}
-      </span>
-        <span class="input-group-btn">
-        <a type="button" class="btn btn-default"><i class="far fa-calendar-alt"></i></a>
-      </span>
-      </div>
-    </div>
-    <div class="form-group col-5 my-3 position"
-         [hidden]="hideElementDaterangepicker">
-      <form #myForm="ngForm" novalidate>
-        <my-date-range-picker name="mydaterange" [options]="myDateRangePickerOptions"
-                              [(ngModel)]="model" required></my-date-range-picker>
-      </form>
-    </div>
-    <div class="form-group col-2 my-3 pr-0" *ngIf="!hideElementDaySelector">
-      <input type="number" class="form-control col-10" value="1" min="1">
     </div>
 
-    <div class="form-group col-2 my-3 pl-0"
-         *ngIf="!hideElementDaySelector">
-      <select class="form-control">
-        <option value="mins">mins</option>
-        <option value="hours">hours</option>
-        <option value="days">days</option>
-        <option value="weeks">weeks</option>
-        <option value="months">months</option>
-        <option value="years">years</option>
-      </select>
-    </div>
+    <app-date-comparator class="row d-flex flex-row" *ngIf="eventSelected"></app-date-comparator>
 
     <button type="button"
             class="close ml-auto mr-4 pos"
             aria-label="Close"
-            (click)="eventWidget.remove()">
+            (click)="removeObject()">
       <span aria-hidden="true">&times;</span>
     </button>
   </div>
-  <!--registeredEvents[0].properties-->
-  <app-filter [properties]="passProperties()"></app-filter>
+  <!--registeredEvents[0].eventProperties-->
+  <!--<app-filter [eventProperties]="eventProperties" [defaultProperties]="defaultProperties"></app-filter>-->
+  <ng-template #container></ng-template>
 
-  <div class="ml-3 mb-3">
-    <button type="button" class="btn btn-link">
+  <div class="ml-3 mb-3" *ngIf="eventSelected">
+    <button type="button" class="btn btn-link" (click)="addPropertyFilter()">
       <i class="fa fa-plus " aria-hidden="true"></i>
       Filter
     </button>
   </div>
 
-  <div class="ml-3">
+  <div class="ml-3" *ngIf="!hideWhere">
     <p class="mb-1">where</p>
   </div>
-  <div class="form-inline">
+  <div class="form-inline" *ngIf="!hideWhere">
     <div class="form-group mb-3 col-3 pr-0">
       <select class="form-control col-10"
               (change)="countDropdown($event.target.value)">
