--- a/frontend/src/app/segment-category/did-events/did-events.component.html
+++ b/frontend/src/app/segment-category/did-events/did-events.component.html
@@ -1,20 +1,18 @@
-<div class="form-group d-inline-flex mt-3">
-    <div class="mr-4">
+<div class="form-group d-inline-flex mt-3" *ngIf="!didNotEvent && components.length">
+    <div class="mr-2">
       <select class="form-control" id="andOr">
         <option>All (AND)</option>
         <option>Any (OR)</option>
       </select>
     </div>
     <div class="mt-2">
-      <p class="font-weight-bold">of these events</p>
+      <p>of these events</p>
     </div>
 </div>
-<app-did-event></app-did-event>
-<ng-template #container>
-</ng-template>
+<!--<app-did-event [hideWhere]="didNotEvent"></app-did-event>-->
+<ng-template #container></ng-template>
 <div>
-  <button class="btn btn-success  mt-3"
-          (click)="addComponent(didEventClass)"><i class="fa fa-plus-circle"></i> Add Event</button>
+  <button class="btn btn-success  mt-3" (click)="addComponent()"><i class="fa fa-plus-circle"></i> Add Event</button>
 </div>
 
 
