--- a/frontend/src/app/segment-category/number-comparator/number-comparator.component.html
+++ b/frontend/src/app/segment-category/number-comparator/number-comparator.component.html
@@ -8,9 +8,9 @@
     </select>
   </div>
   <div class="form-group m-2" *ngIf="field1Required">
-    <input type="text" class="form-control">
+    <input type="number" class="form-control">
   </div>
   <div class="form-group m-2" *ngIf="field2Required">
-    <input type="text" class="form-control">
+    <input type="number" class="form-control">
   </div>
 </div>
