--- a/frontend/src/app/segment-category/segments/segments.component.html
+++ b/frontend/src/app/segment-category/segments/segments.component.html
@@ -1,16 +1,10 @@
-<div class="container">
-  <div class="card">
-    <div class="card-header">
-      Featured
-    </div>
-    <div class="card-body">
-      <h5 class="card-title">Special title treatment</h5>
-      <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-      <a href="#" class="btn btn-primary">Go somewhere</a>
-    </div>
-  </div>
-</div>
 <div class="container-fluid">
+  <div class="text-right mt-3 mb-1">
+    <!-- Button trigger modal -->
+    <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModalLong" (click)="onCreateNew()">
+      Create New Segment
+    </button>
+  </div>
   <table class="table table-bordered my-3">
     <thead style="background-color: rgba(0, 0, 0, .03);">
     <tr>
