--- a/frontend/src/app/segment-category/geography-filters/geography-filter/geography-filter.component.html
+++ b/frontend/src/app/segment-category/geography-filters/geography-filter/geography-filter.component.html
@@ -4,13 +4,14 @@
       <!--<select2 class="form-control" placeholder="Country" [options]="countriesSelectList" [(ngModel)]="selectedCountry" (onSelect)="onCountrySelect($event)"></select2>-->
       <!--<input class="form-control" placeholder="Country"/>-->
       <!--<select2 placeholder="Country" class="form-control"  [data]="countriesSelectList"></select2>-->
-      <select2 [data]="countriesSelectList | async" [value]="countriesSelectList | async" [width]="150"></select2>
+      <select2 [data]="countriesSelectList" [value]="countriesSelectList"
+               [options]="select2Options" (valueChanged)="onCountrySelect($event)"></select2>
     </div>
-    <div class="form-group m-2">
-      <input class="form-control" placeholder="State"/>
+    <div *ngIf="selectedCountry" class="form-group m-2">
+      <select2 [data]="statesSelectList" [value]="statesSelectList" (valueChanged)="onStateSelect($event)"></select2>
     </div>
-    <div class="form-group m-2">
-      <input class="form-control" placeholder="City"/>
+    <div *ngIf="selectedState" class="form-group m-2">
+      <select2 [data]="citiesSelectList" [value]="citiesSelectList" (valueChanged)="onCitySelect($event)"></select2>
     </div>
     <button type="button" class="close ml-auto mr-4 pos" aria-label="Close" (click)="removeObject()">
       <span aria-hidden="true">&times;</span>
